Add authors of the project

--- a/templates/Accueil.html
+++ b/templates/Accueil.html
@@ -23,7 +23,7 @@
 
     <div class="container-fluid">
         <h1 class="text-center">
-            Bienvenue sur Pyhton Publisher
+            Bienvenue sur Pyhton Publisher : Réalisé par Maxime Lamyae et Yusuf
             <br>
             <br>
         </h1>
