Changing the interface

--- a/templates/Accueil.html
+++ b/templates/Accueil.html
@@ -1,8 +1,8 @@
-{# projetFlask/templates/Accueil.html: #}
+{# siteDynamiquePython/PythonPublisher/templates/Accueil.html: #}
 <!DOCTYPE html>
 <html lang="fr">
     <head>
-        <title>Session</title>
+        <title>Python Publisher</title>
         <!--CSS-->
         <link rel="stylesheet" type="text/css" href="static/bootstrap.min.css">
     </head>
