--- a/templates/connexion.html
+++ b/templates/connexion.html
@@ -33,14 +33,13 @@
                 <div class="col-md-4 col-md-offset-4 text-center">
                     <div class="search-box">
                         <div class="caption">
-                            <h3>Advance Password Validation</h3>
-                            <p>Find to All</p>
+                            <h3>Entrez vos identifiants</h3>
                         </div>
                         <form action="" class="loginForm">
                             <div class="input-group">
-                                <input type="text" id="name" class="form-control" placeholder="Full Name">
-                                <input type="password" id="paw" class="form-control" placeholder="Password">
-                                <input type="submit" id="submit" class="form-control" value="Submit">
+                                <input type="text" id="mail" class="form-control" placeholder="Adresse mail">
+                                <input type="password" id="password" class="form-control" placeholder="Mot de passe">
+                                <input type="submit" id="submit" class="form-control" value="Envoyer">
                             </div>
                         </form>
                     </div>
@@ -48,13 +47,13 @@
                 <div class="col-md-4">
                     <div class="aro-pswd_info">
                         <div id="pswd_info">
-                            <h4>Password must be requirements</h4>
+                            <h4>Le mot de passe doit contenir</h4>
                             <ul>
-                                <li id="letter" class="invalid">At least <strong>one letter</strong></li>
-                                <li id="capital" class="invalid">At least <strong>one capital letter</strong></li>
-                                <li id="number" class="invalid">At least <strong>one number</strong></li>
-                                <li id="length" class="invalid">Be at least <strong>8 characters</strong></li>
-                                <li id="space" class="invalid">be<strong> use [~,!,@,#,$,%,^,&,*,-,=,.,;,']</strong></li>
+                                <li id="letter" class="invalid">Au moins <strong>une lettre</strong></li>
+                                <li id="capital" class="invalid">Au moins <strong>une lettre majuscule</strong></li>
+                                <li id="number" class="invalid">Au moins <strong>un chiffre</strong></li>
+                                <li id="length" class="invalid">Doit contenir <strong>8 caractères</strong></li>
+                                <li id="space" class="invalid">Doit<strong> utiliser [~,!,@,#,$,%,^,&,*,-,=,.,;,']</strong></li>
                             </ul>
                         </div>
                     </div>
