--- a/templates/connexion.html
+++ b/templates/connexion.html
@@ -10,7 +10,7 @@
     <nav class="navbar navbar-inverse">
         <div class="container-fluid">
             <div class="navbar-header">
-                <a class="navbar-brand" href="http://localhost:5000/accueil">Page WEB Python</a>
+                <a class="navbar-brand" href="http://localhost:5000/">Page WEB Python</a>
             </div>
             <ul class="nav navbar-nav">
                 <li><a href="http://localhost:5000/vide">Vide</a></li>
@@ -37,9 +37,9 @@
                         </div>
                         <form action="" class="loginForm">
                             <div class="input-group">
-                                <input type="text" id="mail" class="form-control" placeholder="Adresse mail">
-                                <input type="password" id="password" class="form-control" placeholder="Mot de passe">
-                                <input type="submit" id="submit" class="form-control" value="Envoyer">
+                                <input type="text" name='mail' class="form-control" placeholder="Adresse mail" required>
+                                <input type="password" name='mdp' class="form-control" placeholder="Mot de passe" required>
+                                <input type="submit" id="submit" class="btn btn-primary btn-large btn-block" value="Envoyer">
                             </div>
                         </form>
                     </div>
