--- a/templates/inscription.html
+++ b/templates/inscription.html
@@ -35,6 +35,15 @@
                         <div class="caption">
                             <h3>Veuillez saisir les informations ci-dessous pour vous inscrire</h3>
                         </div>
+                        {% with messages = get_flashed_messages() %}
+                        {% if messages %}
+                            <ul>
+                            {% for m in messages %}
+                                <li>{{ m }}</li>
+                            {% endfor %}
+                            </ul>
+                        {% endif %}
+                        {% endwith %}
                         <form action="" method="post" class="loginForm">
                             <div class="input-group">
                                 <input type="text" id="name" class="form-control" placeholder="Pseudo" name="pseudo" required>
