--- a/templates/inscription.html
+++ b/templates/inscription.html
@@ -55,7 +55,7 @@
                         </form>
                     </div>
                 </div>
-                <!--<div class="col-md-4">
+                <div class="col-md-4">
                     <div class="aro-pswd_info">
                         <div id="pswd_info">
                             <h4>Password must be requirements</h4>
@@ -68,7 +68,7 @@
                             </ul>
                         </div>
                     </div>
-                </div>-->
+                </div>
             </div>
         </div>
     </div>
