--- a/templates/connexion.html
+++ b/templates/connexion.html
@@ -23,7 +23,7 @@
 
     <div class="container-fluid">
         <h1 class="text-center">
-            Bienvenue sur la page de connexion, Entrez votre nom et votre mot de passe pour vous connecter :
+            Bienvenue sur la page de connexion. 
             <br>
             <br>
         </h1>
@@ -53,20 +53,7 @@
                         </form>
                     </div>
                 </div>
-                <div class="col-md-4">
-                    <div class="aro-pswd_info">
-                        <div id="pswd_info">
-                            <h4>Le mot de passe doit contenir</h4>
-                            <ul>
-                                <li id="letter" class="invalid">Au moins <strong>une lettre</strong></li>
-                                <li id="capital" class="invalid">Au moins <strong>une lettre majuscule</strong></li>
-                                <li id="number" class="invalid">Au moins <strong>un chiffre</strong></li>
-                                <li id="length" class="invalid">Doit contenir <strong>8 caractères</strong></li>
-                                <li id="space" class="invalid">Doit<strong> utiliser [~,!,@,#,$,%,^,&,*,-,=,.,;,']</strong></li>
-                            </ul>
-                        </div>
-                    </div>
-                </div>
+ 
             </div>
         </div>
     </div>
