Added description about the password in inscription page

--- a/templates/inscription.html
+++ b/templates/inscription.html
@@ -1,4 +1,5 @@
 {# siteDynamiquePython/PythonPublisher/templates/connexion.html: #}
+
 <!DOCTYPE html>
 <html lang="fr">
     <head>
@@ -55,20 +56,19 @@
                         </form>
                     </div>
                 </div>
-                <!--<div class="col-md-4">
+                <<div class="col-md-4">
                     <div class="aro-pswd_info">
                         <div id="pswd_info">
-                            <h4>Password must be requirements</h4>
+                            <h4>Le mot de passe doit contenir</h4>
                             <ul>
-                                <li id="letter" class="invalid">At least <strong>one letter</strong></li>
-                                <li id="capital" class="invalid">At least <strong>one capital letter</strong></li>
-                                <li id="number" class="invalid">At least <strong>one number</strong></li>
-                                <li id="length" class="invalid">Be at least <strong>8 characters</strong></li>
-                                <li id="space" class="invalid">be<strong> use [~,!,@,#,$,%,^,&,*,-,=,.,;,']</strong></li>
+                                <li id="letter" class="invalid">Au moins<strong>une lettre majuscule</strong></li>
+                                <li id="number" class="invalid">Au moins un nombre<strong>one number</strong></li>
+                                <li id="length" class="invalid">Doit contenir<strong>8 charactères</strong></li>
+                                <li id="space" class="invalid">Doit utliser<strong> use [~,!,@,#,$,%,^,&,*,-,=,.,;,']</strong></li>
                             </ul>
                         </div>
                     </div>
-                </div>-->
+                </div>
             </div>
         </div>
     </div>
