Added description about the password in inscription page

--- a/templates/inscription.html
+++ b/templates/inscription.html
@@ -50,7 +50,7 @@
                                 <input type="text" id="name" class="form-control" placeholder="Pseudo" name="pseudo" required>
                                 <input type="text" id="name" class="form-control" placeholder="Mail" name="mail" required>
                                 <input type="password" id="paw" class="form-control" placeholder="Mot de Passe" name="mdp" required>
-                                <input type="text" id="paw" class="form-control" placeholder="Confirmer Mot de Passe" name="confirmer_mdp" required>
+                                <input type="password" id="paw" class="form-control" placeholder="Confirmer Mot de Passe" name="confirmer_mdp" required>
                                 <input type="submit" id="submit" class="form-control" value="Envoyer">
                             </div>
                         </form>
@@ -63,10 +63,10 @@
                         <div id="pswd_info">
                             <h4>Le mot de passe doit contenir</h4>
                             <ul>
-                                <li id="letter" class="invalid">Au moins<strong>une lettre majuscule</strong></li>
-                                <li id="number" class="invalid">Au moins un nombre<strong>one number</strong></li>
-                                <li id="length" class="invalid">Doit contenir<strong>8 charactères</strong></li>
-                                <li id="space" class="invalid">Doit utliser<strong> use [~,!,@,#,$,%,^,&,*,-,=,.,;,']</strong></li>
+                                <li id="letter" class="invalid">Au moins <strong>une lettre majuscule</strong></li>
+                                <li id="number" class="invalid">Au moins <strong>un nombre</strong></li>
+                                <li id="length" class="invalid">Au moins <strong>8 charactères</strong></li>
+                                <li id="space" class="invalid">Les caractères spéciaux <strong> [~,!,@,#,$,%,^,&,*,-,=,.,;,']</strong></li>
                             </ul>
                         </div>
                     </div>
