--- a/templates/Accueil.html
+++ b/templates/Accueil.html
@@ -11,13 +11,13 @@
     <nav class="navbar navbar-inverse">
         <div class="container-fluid">
             <div class="navbar-header">
-                <a class="navbar-brand" href="http://localhost:5000/">Python Publisher</a>
+                <a class="navbar-brand" href="{{url_for('Accueil')}}">Python Publisher</a>
             </div>
             <ul class="nav navbar-nav">
-                <li><a href="http://localhost:5000/vide">Vide</a></li>
-                <li><a href="http://localhost:5000/pages">Pages créées</a></li>
-                <li><a href="http://localhost:5000/connexion">Connexion</a></li>
-                <li><a href="http://localhost:5000/inscription">Inscription</a></li>
+                <li><a href="{{url_for('Vide')}}">Vide</a></li>
+                <li><a href="{{url_for('Pages')}}">Pages créées</a></li>
+                <li><a href="{{url_for('Connexion')}}">Connexion</a></li>
+                <li><a href="{{url_for('Inscriptions')}}">Inscription</a></li>
                 {% if pseudo %}
                     <li><a href="{{url_for('Accueil')}}">Bienvenue : {{pseudo}}</a></li>
                     <li><a href="{{url_for('Logout')}}">Deconnexion</a></li>
@@ -32,6 +32,15 @@
             <br>
             <br>
         </h1>
+            {% with messages = get_flashed_messages() %}
+            {% if messages %}
+                <ul>
+                {% for m in messages %}
+                    <li>{{ m }}</li>
+                {% endfor %}
+                </ul>
+            {% endif %}
+            {% endwith %}
         <div class="text-center">
             <img class="text-center" src="/static/python.png">
         </div>
