Modif HTML navbar connexion/deconnexion & Order & Creation formulaire by max

--- a/templates/Accueil.html
+++ b/templates/Accueil.html
@@ -14,12 +14,16 @@
                 <a class="navbar-brand" href="{{url_for('Accueil')}}">Python Publisher</a>
             </div>
             <ul class="nav navbar-nav">
-                <li><a href="{{url_for('Vide')}}">Vide</a></li>
-                <li><a href="{{url_for('Pages')}}">Pages créées</a></li>
-                <li><a href="{{url_for('Connexion')}}">Connexion</a></li>
-                <li><a href="{{url_for('Inscriptions')}}">Inscription</a></li>
                 {% if pseudo %}
                     <li><a href="{{url_for('Accueil')}}">Bienvenue : {{pseudo}}</a></li>
+                    <li><a href="{{url_for('Vide')}}">Vide</a></li>
+                {% endif %}
+                <li><a href="{{url_for('Pages')}}">Pages créées</a></li>
+                <li><a href="{{url_for('Connexion')}}">Connexion</a></li>
+                {% if not pseudo %}
+                    <li><a href="{{url_for('Inscriptions')}}">Inscription</a></li>
+                {% endif %}
+                {% if pseudo %}
                     <li><a href="{{url_for('Logout')}}">Deconnexion</a></li>
                 {% endif %}
             </ul>
