--- a/templates/vide.html
+++ b/templates/vide.html
@@ -9,24 +9,66 @@
     <nav class="navbar navbar-inverse">
         <div class="container-fluid">
             <div class="navbar-header">
-                <a class="navbar-brand" href="http://localhost:5000/">Page WEB Python</a>
+                <a class="navbar-brand" href="{{url_for('Accueil')}}">Page WEB Python</a>
             </div>
             <ul class="nav navbar-nav">
-                <li><a href="http://localhost:5000/vide">Vide</a></li>
-                <li><a href="http://localhost:5000/pages">Pages créées</a></li>
-                <li><a href="http://localhost:5000/connexion">Connexion</a></li>
-                <li><a href="http://localhost:5000/inscription">Inscription</a></li>
+                {% if pseudo %}
+                    <li><a href="{{url_for('Accueil')}}">Bienvenue : {{pseudo}}</a></li>
+                    <li><a href="{{url_for('Vide')}}">Vide</a></li>
+                {% endif %}
+                <li><a href="{{url_for('Pages')}}">Pages créées</a></li>
+                {% if not pseudo %}
+                    <li><a href="{{url_for('Inscriptions')}}">Inscription</a></li>
+                    <li><a href="{{url_for('Connexion')}}">Connexion</a></li>
+                {% endif %}
+                {% if pseudo %}
+                    <li><a href="{{url_for('Logout')}}">Deconnexion</a></li>
+                {% endif %}
             </ul>
         </div>
     </nav>    
-
-    <div class="container-fluid">
-        <h1 class="text-center">
-            Voici la liste des Publishers
-            <br>
-            <br>
-            </div>
+    <form class="form-horizontal" method="post">
+    <fieldset>
+    <!-- Form Name -->
+    <legend>Formulaire de création de pages</legend>
+    <!-- Text input-->
+    <div class="form-group">
+        <label class="col-md-4 control-label" for="titre">Titre : </label>  
+        <div class="col-md-4">
+            <input name="titre" type="text" placeholder="Entrez le titre de votre Page" class="form-control input-md" required>
         </div>
     </div>
+    <!-- Select Basic -->
+    <div class="form-group">
+      <label class="col-md-4 control-label" for="taille">Taille : </label>
+      <div class="col-md-4">
+        <select name="taille" class="form-control" required>
+          <option value="1">1</option>
+          <option value="2">2</option>
+          <option value="3">3</option>
+          <option value="4">4</option>
+          <option value="5">5</option>
+          <option value="6">6</option>
+        </select>
+      </div>
+    </div>
+    <!-- Text input-->
+    <div class="form-group">
+        <label class="col-md-4 control-label" for="image">Image : </label>  
+            <div class="col-md-2">
+                <input name="image" type="text" placeholder="Nom de l'image et extension" class="form-control input-md" required>
+            </div>
+    </div>
+    <div class="form-group">
+        <label class="col-md-4 control-label" for="Votre article:">Quel est votre article :</label>
+        <br>
+        <textarea class="align-center" rows="15" cols="80" name="article" placeholder="Entrez votre article"  required>
+        </textarea> 
+    </div>
+    <div class="col-md-6 control-label">
+        <input class="btn btn-success" type="submit" id="submit" value="Envoyer">
+    </div>
+    </fieldset>
+    </form>
     </body>
 </html>
