--- a/templates/pages.html
+++ b/templates/pages.html
@@ -6,31 +6,10 @@
         <link rel="stylesheet" type="text/css" href="static/bootstrap.min.css">
     </head>
     <body>
-    <nav class="navbar navbar-inverse">
-        <div class="container-fluid">
-            <div class="navbar-header">
-                <a class="navbar-brand" href="{{url_for('Accueil')}}">Page WEB Python</a>
-            </div>
-            <ul class="nav navbar-nav">
-                {% if pseudo %}
-                    <li><a href="{{url_for('Accueil')}}">Bienvenue : {{pseudo}}</a></li>
-                    <li><a href="{{url_for('Vide')}}">Vide</a></li>
-                {% endif %}
-                <li><a href="{{url_for('Pages')}}">Pages créées</a></li>
-                {% if not pseudo %}
-                    <li><a href="{{url_for('Inscriptions')}}">Inscription</a></li>
-                    <li><a href="{{url_for('Connexion')}}">Connexion</a></li>
-                {% endif %}
-                {% if pseudo %}
-                    <li><a href="{{url_for('Logout')}}">Deconnexion</a></li>
-                {% endif %}
-            </ul>
-        </div>
-    </nav>    
-
+    {% include 'menu.html' %}
     <div class="container-fluid">
         <h1 class="text-center">
-            Voici la liste des Publishers
+            Voici la liste de nos Publishers
             <br>
             <br>
             </div>
