--- a/templates/inscription.html
+++ b/templates/inscription.html
@@ -2,11 +2,7 @@
 
 <!DOCTYPE html>
 <html lang="fr">
-    <head>
-        <title>Connexion</title>
-        <!--CSS-->
-        <link rel="stylesheet" type="text/css" href="static/bootstrap.min.css">
-    </head>
+    {% include 'header.html' %}
     <body>
     {% include 'menu.html' %}
     <div class="container-fluid">
@@ -23,15 +19,18 @@
                         <div class="caption">
                             <h3>Veuillez saisir les informations ci-dessous pour vous inscrire</h3>
                         </div>
-                        {% with messages = get_flashed_messages() %}
-                        {% if messages %}
+
+                           {% with messages = get_flashed_messages() %}
+                            {% if messages %}
+                            <div class="flash">
                             <ul>
                             {% for m in messages %}
                                 <li>{{ m }}</li>
                             {% endfor %}
                             </ul>
-                        {% endif %}
-                        {% endwith %}
+                            </div>
+                            {% endif %}
+                            {% endwith %} 
                         <form action="" method="post" class="loginForm">
                             <div class="input-group">
                                 <input type="text" id="name" class="form-control" placeholder="Pseudo" name="pseudo" required>
