--- a/templates/vide.html
+++ b/templates/vide.html
@@ -1,10 +1,6 @@
 <!DOCTYPE html>
 <html lang="fr">
-    <head>
-        <title>Pages publiées</title>
-        <!--CSS-->
-        <link rel="stylesheet" type="text/css" href="static/bootstrap.min.css">
-    </head>
+    {% include 'header.html' %}
     <body>
     {% include 'menu.html' %}
     <form class="form-horizontal" method="post">
