--- a/templates/formulaire.html
+++ b/templates/formulaire.html
@@ -3,7 +3,7 @@
     {% include 'header.html' %}
     <body>
     {% include 'menu.html' %}
-    <form class="form-horizontal" method="post">
+    <form action="{{url_for('Accueil')}}" class="form-horizontal" method="post">
     <fieldset>
     <!-- Form Name -->
     <legend>Formulaire de création de pages</legend>
