DAO inscription working

--- a/templates/connexion.html
+++ b/templates/connexion.html
@@ -35,7 +35,7 @@
                             <div class="input-group">
                                 <input type="text" name='mail' class="form-control" placeholder="Adresse mail" required>
                                 <input type="password" name='mdp' class="form-control" placeholder="Mot de passe" required>
-                                <input type="submit" id="submit" class="btn btn-primary btn-large btn-block" value="Envoyer">
+                                <input type="submit" id="submit" class="btn btn-primary btn-large btn-block" value="Connexion">
                             </div>
                         </form>
                     </div>
