--- a/templates/inscription.html
+++ b/templates/inscription.html
@@ -37,7 +37,7 @@
                                 <input type="text" id="name" class="form-control" placeholder="Mail" name="mail" required>
                                 <input type="password" id="paw" class="form-control" placeholder="Mot de Passe" name="mdp" required>
                                 <input type="password" id="paw" class="form-control" placeholder="Confirmer Mot de Passe" name="confirmer_mdp" required>
-                                <input type="submit" id="submit" class="form-control" value="Envoyer">
+                                <input type="submit" id="submit" class="btn btn-primary btn-large btn-block" value="Inscription">
                             </div>
                         </form>
                     </div>
