--- a/templates/Accueil.html
+++ b/templates/Accueil.html
@@ -7,7 +7,7 @@
     {% include 'menu.html' %}   
     <div class="container-fluid">
         <h1 class="text-center">
-            Bienvenue sur Pyhton Publisher : Réalisé par Maxime Lamyae et Yusuf
+            Bienvenue sur Pyhton Publisher : Réalisé par Maxime, Lamyae et Yusuf
             <br>
             <br>
         </h1>
