Update the server

--- a/templates/formulaire.html
+++ b/templates/formulaire.html
@@ -7,6 +7,17 @@
     <fieldset>
     <!-- Form Name -->
     <legend>Formulaire de création de pages</legend>
+    <!-- Select Basic -->
+    <div class="form-group">
+      <label class="col-md-4 control-label" for="numero_page">Numéro de Page : </label>
+      <div class="col-md-4">
+        <select name="numero_page" class="form-control" required>
+          <option value="1">1</option>
+          <option value="2">2</option>
+          <option value="3">3</option>
+        </select>
+      </div>
+    </div>
     <!-- Text input-->
     <div class="form-group">
         <label class="col-md-4 control-label" for="titre">Titre : </label>  
@@ -28,6 +39,7 @@
         </select>
       </div>
     </div>
+
     <!-- Text input-->
     <div class="form-group">
         <label class="col-md-4 control-label" for="image">Image :</label>  
