correction orthographe page d'inscription

--- a/templates/inscription.html
+++ b/templates/inscription.html
@@ -51,8 +51,8 @@
                             <ul>
                                 <li id="letter" class="invalid">Au moins <strong>une lettre majuscule</strong></li>
                                 <li id="number" class="invalid">Au moins <strong>un nombre</strong></li>
-                                <li id="length" class="invalid">Au moins <strong>8 charactères</strong></li>
-                                <li id="space" class="invalid">Les caractères spéciaux <strong> [~,!,@,#,$,%,^,&,*,-,=,.,;,']</strong></li>
+                                <li id="length" class="invalid">Au moins <strong>8 caractères</strong></li>
+                                <li id="space" class="invalid">Au moins un caractère spécial ci-contre <strong>[~,!,@,#,$,%,^,&,*,-,=,.,;,']</strong></li>
                             </ul>
                         </div>
                     </div>
