--- a/templates/pages.html
+++ b/templates/pages.html
@@ -5,7 +5,7 @@
     {% include 'menu.html' %}
     <div class="container-fluid">
         <h1 class="text-center">
-            Voici la liste de nos Publishers
+            Voici la liste de vos Publishers
             <br>
             <br>
             </div>
