Added the function to input photos in articles

--- a/templates/page.html
+++ b/templates/page.html
@@ -9,7 +9,12 @@
         </h{{page["taille"]}}>
         <!-- <img class="img-thumbnail" src="{{image}}"> -->
         <div class="col-lg-4 col-sm-offset-4">
+            <div class="text-center">          
+                <img class="img-thumbnail" src="{{chemin_image}}">
+            </div>
             <div class="text-justify">
+            <br>
+            <br>
                 {{page["article"]}}
             </div>
         </div>
