--- a/templates/menu.html
+++ b/templates/menu.html
@@ -23,7 +23,7 @@
             </li>
         
                 {% if pseudo %}
-            <li><a class="active" href="">Bienvenue : {{pseudo}}</a></li>
+            <li><a class="active" href="/compte">Bienvenue : {{pseudo}}</a></li>
             <li><a href="{{url_for('Formulaire')}}">Formulaire</a></li>
                 {% endif %}
             <li class="dropdown"><a href="{{url_for('Pages')}}">Pages créées</a></li>
