formulaire2 up-date

--- a/templates/formulaire2.html
+++ b/templates/formulaire2.html
@@ -26,11 +26,14 @@
         </select>
       </div>
     </div>
-        <input type="hidden" name="numero_page" class="form-control" value="{{data.numero_page}}" required>
-          <option value="1">1</option>
-          <option value="2">2</option>
-          <option value="3">3</option>
-        </select>
+
+    <div class="form-group">
+      <input type="hidden" name="numero_page" class="form-control" value="{{data.numero_page}}" required>
+        <option value="1">1</option>
+        <option value="2">2</option>
+        <option value="3">3</option>
+    </div>
+    
     <!-- Text input-->
 
     <div class="form-group">
