--- a/templates/compte.html
+++ b/templates/compte.html
@@ -7,6 +7,7 @@
       <form action="" class="form-horizontal" method="post">
       <h2>
         Bienvenue : {{pseudo}}
+        <img widht="200" height="200" src="/static/account.png">
       </h2>        
       <fieldset>
           <!-- Form Name -->
