--- a/templates/page.html
+++ b/templates/page.html
@@ -7,11 +7,10 @@
         <h{{page["taille"]}}>
             {{page["titre"]}}
         </h{{page["taille"]}}>
-        <!-- <img class="img-thumbnail" src="{{image}}"> -->
+        <div>          
+            <img class="img-thumbnail" src="{{chemin_image}}">
+        </div>
         <div class="col-lg-4 col-sm-offset-4">
-            <div class="text-center">          
-                <img class="img-thumbnail" src="{{chemin_image}}">
-            </div>
             <div class="text-justify">
             <br>
             <br>
