Formulaire up date

--- a/templates/pages.html
+++ b/templates/pages.html
@@ -25,7 +25,7 @@
                         <iframe id="frame" src="pages/{{pseudo}}/1" href="pages/{{pseudo}}/1" name="myFrame"></iframe>                
                     </th>
                     <th>
-                        <a href="pages/{{pseudo}}/1">Votre première page : </a>                
+                        <a href="pages/{{pseudo}}/1">Votre première page </a>                
                     </th>
                 </table>
                 <table>
@@ -33,7 +33,7 @@
                         <iframe id="frame" src="pages/{{pseudo}}/2"></iframe>
                     </th>
                     <th>
-                        <a href="pages/{{pseudo}}/2">Votre seconde page : </a>
+                        <a href="pages/{{pseudo}}/2">Votre seconde page </a>
                     </th>
                 </table>
                 <table>
@@ -41,7 +41,7 @@
                         <iframe id="frame" src="pages/{{pseudo}}/3"></iframe>
                     </th>
                     <th>
-                        <a href="pages/{{pseudo}}/3">Votre troisième page : </a>
+                        <a href="pages/{{pseudo}}/3">Votre troisième page </a>
                     </th>
                 </table>
         </div>
