--- a/templates/formulaire.html
+++ b/templates/formulaire.html
@@ -3,7 +3,7 @@
     {% include 'header.html' %}
     <body>
     {% include 'menu.html' %}
-    <form action="" class="form-horizontal" method="post">
+    <form action="" class="form-horizontal" method="post" enctype="multipart/form-data">
     <fieldset>
     <!-- Form Name -->
     <legend>Formulaire de création de pages</legend>
@@ -41,9 +41,9 @@
     </div>
 
     <div class="form-group">
-      <label class="col-md-4 control-label" for="image">Image : </label>
+      <label class="col-md-4 control-label" for="chemin_image">Image : </label>
       <div class="col-md-4">
-        <input class="btn btn-primary" type="file" name="chemin_image" class="form-control input-md" required>
+        <input class="btn btn-primary" type="file" name="chemin_image" id="chemin_image" class="form-control input-md" required>
       </div>
     </div>
   
@@ -55,10 +55,11 @@
 
     </div>
     <div class="col-md-6 control-label">
-        <input class="btn btn-success" type="submit" id="submit" value="Envoyer">
+        <input class="btn btn-success" type="submit" id="btsub" value="Envoyer">
     </div>
     </fieldset>
     </form>
+    {{update}}
     </body>
 		    {% include 'bottom.html' %}
 </html>
