New connection worked

--- a/templates/page.html
+++ b/templates/page.html
@@ -8,7 +8,7 @@
             {{page["titre"]}}
         </h{{page["taille"]}}>
         <div>          
-            <img class="img-thumbnail" src="{{chemin_image}}">
+            <img class="img-thumbnail" height="100" width="400" src="{{chemin_image}}">
         </div>
         <div class="col-lg-4 col-sm-offset-4">
             <div class="text-justify">
