--- a/templates/menu.html
+++ b/templates/menu.html
@@ -23,8 +23,18 @@
             </li>
                 {% if pseudo %}
             <li><a class="active" href="/compte">Bienvenue : {{pseudo}}</a></li>
-            <li><a href="{{url_for('Formulaire')}}">Formulaire</a></li>
-            <li class="dropdown"><a href="{{url_for('Pages')}}">Vos pages</a></li>
+            <li><a href="{{url_for('Formulaire')}}">Créer Page</a></li>
+            <li class="dropdown">
+                <a class="dropdown-toggle" data-toggle="dropdown" href="{{url_for('ModifPage')}}">Modifier Page<span class="caret"></span></a>
+                <ul class="dropdown-menu">
+                {% for Pages in listePages %}
+                <li>
+                    <a tabindex="-1" class="test" href="/modifpage/{{loop.index}}">{{Pages}}</a>
+                </li>
+                {% endfor %}
+                </ul>
+            </li>
+            <li><a href="{{url_for('Pages')}}">Vos pages</a></li>
             <li><a href="{{url_for('Logout')}}">Deconnexion</a></li>
                 {% endif %}
                 {% if not pseudo %}
