New images and icons

--- a/templates/inscription.html
+++ b/templates/inscription.html
@@ -10,6 +10,7 @@
             Bienvenue sur la page d'inscription.
             <br>
             <br>
+            <img widht="200" height="200" src="/static/user.png">
         </h1>
         <br>
         <div class="container">
