--- a/templates/Accueil.html
+++ b/templates/Accueil.html
@@ -7,7 +7,7 @@
     {% include 'menu.html' %}   
     <div class="container-fluid">
         <h1 class="text-center">
-            Bienvenue sur Pyhton Publisher : Réalisé par Maxime, Lamyae et Yusuf
+            Bienvenue sur Pyhton Publisher
             <br>
             <br>
         </h1>
@@ -29,8 +29,10 @@
             <br>
             <br>
             <br>
-            <br>
             <img class="text-center" height="100" width="100" src="/static/orange.png">
+            <br>
+            <br>
+            <h4 class="text-center"> Réalisé par Lamyae LAAROUSSI, Maxime RASSE et Yusuf MAKANJUOLA </h3>
         </div>
     </div>
     </body>
