--- a/templates/modifpage.html
+++ b/templates/modifpage.html
@@ -48,7 +48,7 @@
     </div>
     </fieldset>
     </form>
-    {{update}}
     </body>
+     {{pagenumber}}
 		    {% include 'bottom.html' %}
 </html>
