modification du titre de la page modifPage

--- a/templates/modifpage.html
+++ b/templates/modifpage.html
@@ -6,7 +6,7 @@
     <form action="" class="form-horizontal" method="post" enctype="multipart/form-data">
     <fieldset>
     <!-- Form Name -->
-    <legend>Formulaire de création de pages</legend>
+    <legend>Formulaire de modification de pages</legend>
     <!-- Text input-->
     <div class="form-group">
         <label class="col-md-4 control-label" for="titre">Titre : </label>  
